--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html 1and="pt-br"> 
-    <head>
-        <meta charset="UTF-8">
-        <title> Barbearia Alura</title>
+    <meta charset="UTF-8">
+    <title>barbearia alura</title>
+    
+     <meta charset="UTF-8">
+
+    <title> Barbearia Alura</title>
 
     </head>
     <body>
@@ -18,5 +21,3 @@
 
    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 </html>
-
-
