--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html 1and="pt-br"> 
-    <head>
+<html 1ang="pt-br">
+    <head> 
+        <meta charset="UTF-8">
+        <title> Barbearia Alura</title>
+
+        <style>
+           p {
+                   text-align:center
+           }  
+        </style>
     </head>
-    <body>
 
-    </body>
-    
-     <meta charset="UTF-8">
-    <title> Barbearia Alura</title>
+    <boby>
+        <h1 style="text-align: center">sobre a Barbearia Alura</h1> 
 
+     <p>Localizada no coracao da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que ha de melhor para o seu cabelo e barba. Fundada em 2019, A Barbearia Alura ja destaque na cidade e conquista novos clientes a cada dia.</p>
+   
+<p
    <h1>Sobre a Barbearia Alura</h1>
 
    <p>Localizada no coração da cidade a <strong> Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquist novos clientes a cada dia.</p>
